--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -5,7 +5,7 @@
     "dev": "yarn rimraf .env && yarn next dev",
     "watch": "npm run dev",
     "build": "yarn validate && yarn next-build",
-    "next-build": "yarn next build",
+    "next-build": "yarn create-images-domain && yarn next build",
     "start": "yarn next start",
     "start:proxy-experimental": "yarn next start --port 80",
     "format": "yarn prettier --write \"**/*.{js,jsx,ts,tsx,md,css,json}\" --ignore-path .gitignore",
