--- a/turbo.json
+++ b/turbo.json
@@ -25,9 +25,14 @@
       "outputs": [".env"],
       "cache": false
     },
+    "create-images-domain": {
+      "dependsOn": ["^create-images-domain"],
+      "cache": false
+    },
     "build": {
       "dependsOn": [
         "copy-env",
+        "^create-images-domain",
         "^build",
         "$CORS_ORIGIN_URL",
         "$NEXT_PUBLIC_PROD_ORIGIN",
