--- a/turbo.json
+++ b/turbo.json
@@ -1,59 +1,62 @@
 {
   "$schema": "https://turborepo.org/schema.json",
-  "baseBranch": "origin/main",
   "pipeline": {
     "copy-env": {
       "dependsOn": [
-        "^copy-env",
-        "$POSTGRES_PASSWORD",
-        "$POSTGRES_USER",
-        "$DB_HOST",
-        "$POSTGRES_DB",
-        "$DATABASE_URL",
-        "$CORS_ORIGIN_URL",
-        "$PORT_API",
-        "$JWT_SECRET",
-        "$NEXT_PUBLIC_PROD_ORIGIN",
-        "$NODE_ENV",
-        "$DISCORD_CLIENT_ID",
-        "$DISCORD_CLIENT_SECRET",
-        "$ENCRYPTION_TOKEN",
-        "$DOMAIN",
-        "$SECURE_COOKIES_FOR_IFRAME",
-        "$PORT_CLIENT"
+        "^copy-env"
       ],
-      "outputs": [".env"],
+      "outputs": [
+        ".env"
+      ],
       "cache": false
     },
     "create-images-domain": {
-      "dependsOn": ["^create-images-domain"],
+      "dependsOn": [
+        "^create-images-domain"
+      ],
       "cache": false
     },
     "build": {
       "dependsOn": [
-        "copy-env",
+        "^copy-env",
         "^create-images-domain",
-        "^build",
-        "$CORS_ORIGIN_URL",
-        "$NEXT_PUBLIC_PROD_ORIGIN",
-        "$NODE_ENV"
+        "^build"
       ],
-      "outputs": [".next/**", "dist/**"],
+      "outputs": [
+        ".next/**",
+        "dist/**"
+      ],
       "cache": false
     },
     "typecheck": {
-      "dependsOn": ["^typecheck"],
+      "dependsOn": [
+        "^typecheck"
+      ],
       "outputs": []
     },
     "test": {
-      "dependsOn": ["^test"],
+      "dependsOn": [
+        "^test"
+      ],
+      "inputs": [
+        "src/**/*.tsx",
+        "src/**/*.ts",
+        "tests/**/*.test.ts"
+      ],
       "outputs": []
     },
     "watch": {
       "cache": false,
-      "outputs": [".next/**", "dist/**"],
-      "dependsOn": ["^watch"]
+      "outputs": [
+        ".next/**",
+        "dist/**"
+      ],
+      "dependsOn": [
+        "^watch"
+      ]
     }
   },
-  "globalDependencies": ["**/.env"]
+  "globalDependencies": [
+    "**/.env"
+  ]
 }
