:hammer: chore: update other workflows

--- a/.github/workflows/cancel.yml
+++ b/.github/workflows/cancel.yml
@@ -1,5 +1,10 @@
 name: Cancel
-on: [push, pull_request]
+
+on:
+  push:
+    branches: ["main"]
+  pull_request:
+    types: [opened, synchronize]
 
 jobs:
   cancel:
