:hammer: chore: update turbo.json

--- a/turbo.json
+++ b/turbo.json
@@ -8,6 +8,7 @@
     },
     "create-images-domain": {
       "dependsOn": ["^create-images-domain"],
+      "outputs": ["next.config.js"],
       "cache": false
     },
     "build": {
