--- a/.github/workflows/test-builds-typecheck.yml
+++ b/.github/workflows/test-builds-typecheck.yml
@@ -10,6 +10,9 @@ jobs:
   build:
     name: Build & Typecheck
     runs-on: ubuntu-latest
+    env:
+      TURBO_TOKEN: ${{ secrets.TURBO_TOKEN }}
+      TURBO_TEAM: ${{ secrets.TURBO_TEAM }}
 
     strategy:
       matrix:
