--- a/turbo.json
+++ b/turbo.json
@@ -1,43 +1,18 @@
 {
   "$schema": "https://turborepo.org/schema.json",
-  "baseBranch": "origin/main",
   "pipeline": {
     "copy-env": {
-      "dependsOn": [
-        "^copy-env",
-        "$POSTGRES_PASSWORD",
-        "$POSTGRES_USER",
-        "$DB_HOST",
-        "$POSTGRES_DB",
-        "$DATABASE_URL",
-        "$CORS_ORIGIN_URL",
-        "$PORT_API",
-        "$JWT_SECRET",
-        "$NEXT_PUBLIC_PROD_ORIGIN",
-        "$NODE_ENV",
-        "$DISCORD_CLIENT_ID",
-        "$DISCORD_CLIENT_SECRET",
-        "$ENCRYPTION_TOKEN",
-        "$DOMAIN",
-        "$SECURE_COOKIES_FOR_IFRAME",
-        "$PORT_CLIENT"
-      ],
+      "dependsOn": ["^copy-env"],
       "outputs": [".env"],
       "cache": false
     },
     "create-images-domain": {
       "dependsOn": ["^create-images-domain"],
+      "outputs": ["next.config.js"],
       "cache": false
     },
     "build": {
-      "dependsOn": [
-        "copy-env",
-        "^create-images-domain",
-        "^build",
-        "$CORS_ORIGIN_URL",
-        "$NEXT_PUBLIC_PROD_ORIGIN",
-        "$NODE_ENV"
-      ],
+      "dependsOn": ["^copy-env", "^create-images-domain", "^build"],
       "outputs": [".next/**", "dist/**"],
       "cache": false
     },
@@ -47,6 +22,7 @@
     },
     "test": {
       "dependsOn": ["^test"],
+      "inputs": ["src/**/*.tsx", "src/**/*.ts", "tests/**/*.test.ts"],
       "outputs": []
     },
     "watch": {
