:tada: feat: add script to validate locales

--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -5,12 +5,13 @@
     "dev": "yarn rimraf .env && yarn next dev",
     "watch": "npm run dev",
     "build": "yarn validate && yarn next-build",
-    "next-build": "yarn create-images-domain && yarn next build",
+    "next-build": "yarn create-images-domain && yarn validate-locales && yarn next build",
     "start": "yarn next start",
     "start:proxy-experimental": "yarn next start --port 80",
     "validate": "node ../../scripts/validate.mjs",
     "typecheck": "yarn tsc --noEmit",
     "copy-env": "node ../../scripts/copy-env.mjs --client",
+    "validate-locales": "node ../../scripts/validate-locales.mjs",
     "test:watch": "yarn vitest --watch",
     "test": "yarn vitest run",
     "create-images-domain": "node ../../scripts/create-images-domain.mjs"
