:hammer: chore: improve turbo flow & remove useless warning

--- a/turbo.json
+++ b/turbo.json
@@ -16,7 +16,7 @@
       "cache": false
     },
     "build": {
-      "dependsOn": ["^copy-env", "^create-images-domain", "^validate-locales", "^build"],
+      "dependsOn": ["copy-env", "create-images-domain", "validate-locales", "^build"],
       "outputs": [".next/**", "dist/**"],
       "cache": false
     },
