--- a/.eslintignore
+++ b/.eslintignore
@@ -5,9 +5,9 @@ dist
 .env
 .data
 
-packages/api/public/**/*.png
-packages/api/public/**/*.svg
-packages/api/public/**/*.jpg
-packages/api/public/**/*.jpeg
+apps/api/public/**/*.png
+apps/api/public/**/*.svg
+apps/api/public/**/*.jpg
+apps/api/public/**/*.jpeg
 
 next-env.d.ts
