--- a/.github/workflows/test-builds-typecheck.yml
+++ b/.github/workflows/test-builds-typecheck.yml
@@ -32,7 +32,7 @@ jobs:
         id: nextjs-cache
         uses: actions/cache@v2
         with:
-          path: ${{ github.workspace }}/packages/client/.next/cache
+          path: ${{ github.workspace }}/apps/client/.next/cache
           key: ${{ runner.os }}-nextjs-${{ hashFiles('**/yarn.lock') }}-${{ hashFiles('**.[jt]s', '**.[jt]sx') }}
           restore-keys: |
             ${{ runner.os }}-nextjs-${{ hashFiles('**/yarn.lock') }}-
