--- a/.gitignore
+++ b/.gitignore
@@ -5,12 +5,12 @@ dist
 .env
 .data
 
-packages/api/public/**/*.png
-packages/api/public/**/*.svg
-packages/api/public/**/*.jpg
-packages/api/public/**/*.jpeg
-packages/api/public/**/*.gif
-packages/api/public/**/*.webp
+apps/api/public/**/*.png
+apps/api/public/**/*.svg
+apps/api/public/**/*.jpg
+apps/api/public/**/*.jpeg
+apps/api/public/**/*.gif
+apps/api/public/**/*.webp
 
 .eslintcache
 
@@ -24,11 +24,12 @@ packages/api/public/**/*.webp
 .vscode/settings.json
 tsconfig.tsbuildinfo
 
-packages/client/public/favicon.png
-packages/client/public/sounds/*.mp3
+apps/client/public/favicon.png
+apps/client/public/sounds/*.mp3
 
 .husky/_
 .turbo
+apps/**/coverage
 packages/**/coverage
 
 test.mjs
