--- a/.github/workflows/test-builds-typecheck.yml
+++ b/.github/workflows/test-builds-typecheck.yml
@@ -23,19 +23,18 @@ jobs:
       - name: Use Node.js ${{ matrix.node-version }}
         uses: actions/setup-node@v2
         with:
-          fetch-depth: 2
           cache: yarn
           cache-dependency-path: yarn.lock
           node-version: ${{ matrix.node-version }}
 
-      - name: Next.js Cache
-        id: nextjs-cache
-        uses: actions/cache@v2
-        with:
-          path: ${{ github.workspace }}/apps/client/.next/cache
-          key: ${{ runner.os }}-nextjs-${{ hashFiles('**/yarn.lock') }}-${{ hashFiles('**.[jt]s', '**.[jt]sx') }}
-          restore-keys: |
-            ${{ runner.os }}-nextjs-${{ hashFiles('**/yarn.lock') }}-
+      # - name: Next.js Cache
+      #   id: nextjs-cache
+      #   uses: actions/cache@v2
+      #   with:
+      #     path: ${{ github.workspace }}/apps/client/.next/cache
+      #     key: ${{ runner.os }}-nextjs-${{ hashFiles('**/yarn.lock') }}-${{ hashFiles('**.[jt]s', '**.[jt]sx') }}
+      #     restore-keys: |
+      #       ${{ runner.os }}-nextjs-${{ hashFiles('**/yarn.lock') }}-
 
       - name: Install dependencies
         run: yarn install --immutable
