--- a/.github/workflows/test-builds-typecheck.yml
+++ b/.github/workflows/test-builds-typecheck.yml
@@ -19,13 +19,16 @@ jobs:
         node-version: [16.x]
 
     steps:
-      - uses: actions/checkout@v2
+      - name: Check out code
+        uses: actions/checkout@v2
+        with:
+          fetch-depth: 2
+
       - name: Use Node.js ${{ matrix.node-version }}
         uses: actions/setup-node@v2
         with:
-          cache: yarn
-          cache-dependency-path: yarn.lock
           node-version: ${{ matrix.node-version }}
+          cache: yarn
 
       # - name: Next.js Cache
       #   id: nextjs-cache
@@ -37,7 +40,7 @@ jobs:
       #       ${{ runner.os }}-nextjs-${{ hashFiles('**/yarn.lock') }}-
 
       - name: Install dependencies
-        run: yarn install --immutable
+        run: yarn
 
       - name: Run turbo build
         run: yarn turbo run build
