--- a/.github/workflows/test-builds-typecheck.yml
+++ b/.github/workflows/test-builds-typecheck.yml
@@ -43,10 +43,4 @@ jobs:
         run: yarn
 
       - name: Run turbo build
-        run: yarn turbo run build
-
-      - name: Run turbo typecheck
-        run: yarn turbo run typecheck
-
-      - name: Run turbo test
-        run: yarn turbo run test --parallel
+        run: yarn turbo run build typecheck test
