--- a/.github/workflows/test-builds-typecheck.yml
+++ b/.github/workflows/test-builds-typecheck.yml
@@ -30,14 +30,14 @@ jobs:
           node-version: ${{ matrix.node-version }}
           cache: yarn
 
-      # - name: Next.js Cache
-      #   id: nextjs-cache
-      #   uses: actions/cache@v2
-      #   with:
-      #     path: ${{ github.workspace }}/apps/client/.next/cache
-      #     key: ${{ runner.os }}-nextjs-${{ hashFiles('**/yarn.lock') }}-${{ hashFiles('**.[jt]s', '**.[jt]sx') }}
-      #     restore-keys: |
-      #       ${{ runner.os }}-nextjs-${{ hashFiles('**/yarn.lock') }}-
+      - name: Next.js Cache
+        id: nextjs-cache
+        uses: actions/cache@v2
+        with:
+          path: ${{ github.workspace }}/apps/client/.next/cache
+          key: ${{ runner.os }}-nextjs-${{ hashFiles('**/yarn.lock') }}-${{ hashFiles('**.[jt]s', '**.[jt]sx') }}
+          restore-keys: |
+            ${{ runner.os }}-nextjs-${{ hashFiles('**/yarn.lock') }}-
 
       - name: Install dependencies
         run: yarn
