--- a/.github/workflows/test-builds-typecheck.yml
+++ b/.github/workflows/test-builds-typecheck.yml
@@ -10,9 +10,9 @@ jobs:
   build:
     name: Build & Typecheck
     runs-on: ubuntu-latest
-    env:
-      TURBO_TOKEN: ${{ secrets.TURBO_TOKEN }}
-      TURBO_TEAM: ${{ secrets.TURBO_TEAM }}
+    # env:
+    #   TURBO_TOKEN: ${{ secrets.TURBO_TOKEN }}
+    #   TURBO_TEAM: ${{ secrets.TURBO_TEAM }}
 
     strategy:
       matrix:
@@ -30,14 +30,14 @@ jobs:
           node-version: ${{ matrix.node-version }}
           cache: yarn
 
-      # - name: Next.js Cache
-      #   id: nextjs-cache
-      #   uses: actions/cache@v2
-      #   with:
-      #     path: ${{ github.workspace }}/apps/client/.next/cache
-      #     key: ${{ runner.os }}-nextjs-${{ hashFiles('**/yarn.lock') }}-${{ hashFiles('**.[jt]s', '**.[jt]sx') }}
-      #     restore-keys: |
-      #       ${{ runner.os }}-nextjs-${{ hashFiles('**/yarn.lock') }}-
+      - name: Next.js Cache
+        id: nextjs-cache
+        uses: actions/cache@v2
+        with:
+          path: ${{ github.workspace }}/apps/client/.next/cache
+          key: ${{ runner.os }}-nextjs-${{ hashFiles('**/yarn.lock') }}-${{ hashFiles('**.[jt]s', '**.[jt]sx') }}
+          restore-keys: |
+            ${{ runner.os }}-nextjs-${{ hashFiles('**/yarn.lock') }}-
 
       - name: Install dependencies
         run: yarn
