:tada: feat: add support for wildcards in CORS

--- a/.env.example
+++ b/.env.example
@@ -23,8 +23,12 @@ JWT_SECRET="some-random-string-of-characters"
 ENCRYPTION_TOKEN="Geu2WGypP7irbwa3tCeeKS6YiyluFLep"
 
 # This is the URL/IP to your site where the CAD is hosted.
-# -> e.g. https://cad.mysite.com or http://99.99.00.190:3000
+# -> e.g. https://cad.mysite.com or http://99.99.00.190:3000 or *
 CORS_ORIGIN_URL="http://localhost:3000"
+
+# This is the URL/IP to your site where the CAD is hosted.
+# -> e.g. https://cad.mysite.com or http://99.99.00.190:3000
+NEXT_PUBLIC_CLIENT_URL="http://localhost:3000/v1"
 
 # The URL/IP to where the API is hosted.
 # -> e.g. https://cad-api.mysite.com/v1 or http://99.99.00.190:8080/v1
