:tada: feat: what's new modal

--- a/apps/client/package.json
+++ b/apps/client/package.json
@@ -41,6 +41,7 @@
     "@snailycad/schemas": "1.26.6",
     "@snailycad/types": "1.26.6",
     "@snailycad/utils": "1.26.6",
+    "@tailwindcss/typography": "^0.5.7",
     "@tanstack/match-sorter-utils": "^8.1.1",
     "@tanstack/react-table": "^8.5.13",
     "@tanstack/react-virtual": "^3.0.0-alpha.0",
@@ -53,6 +54,7 @@
     "is-hotkey": "^0.2.0",
     "is-mobile": "^3.1.1",
     "leaflet": "^1.9.1",
+    "mdast-util-find-and-replace": "^2.2.1",
     "next": "^12.3.1",
     "next-intl": "2.7.6",
     "nookies": "^2.5.2",
@@ -69,9 +71,13 @@
     "react-google-recaptcha-v3": "^1.10.0",
     "react-hot-toast": "^2.4.0",
     "react-leaflet": "^4.1.0",
+    "react-markdown": "^8.0.3",
     "react-select": "^5.4.0",
     "react-sortablejs": "^6.1.4",
     "react-use": "^17.4.0",
+    "remark-gfm": "^3.0.1",
+    "remark-github": "^11.2.4",
+    "remark-plugin-refined-github": "^0.0.2",
     "slate": "^0.82.1",
     "slate-history": "^0.66.0",
     "slate-react": "^0.83.0",
