--- a/apps/client/package.json
+++ b/apps/client/package.json
@@ -30,6 +30,7 @@
     "@radix-ui/react-tabs": "^1.0.0",
     "@radix-ui/react-toolbar": "^1.0.0",
     "@radix-ui/react-tooltip": "^1.0.0",
+    "@react-aria/button": "^3.6.1",
     "@react-aria/calendar": "^3.0.2",
     "@react-aria/datepicker": "^3.1.1",
     "@react-aria/dialog": "^3.3.1",
