--- a/apps/client/package.json
+++ b/apps/client/package.json
@@ -20,6 +20,7 @@
     "@casper124578/use-socket.io": "4.1.3",
     "@casper124578/useful": "^2.0.5",
     "@headlessui/react": "^1.7.3",
+    "@internationalized/date": "^3.0.1",
     "@next/bundle-analyzer": "^12.3.1",
     "@radix-ui/react-accordion": "^1.0.0",
     "@radix-ui/react-context-menu": "^1.0.0",
@@ -29,10 +30,17 @@
     "@radix-ui/react-tabs": "^1.0.0",
     "@radix-ui/react-toolbar": "^1.0.0",
     "@radix-ui/react-tooltip": "^1.0.0",
+    "@react-aria/button": "^3.6.1",
+    "@react-aria/calendar": "^3.0.2",
+    "@react-aria/datepicker": "^3.1.1",
+    "@react-aria/dialog": "^3.3.1",
     "@react-aria/focus": "^3.8.0",
     "@react-aria/interactions": "^3.11.0",
     "@react-aria/label": "^3.4.1",
+    "@react-aria/overlays": "^3.10.1",
     "@react-aria/ssr": "^3.3.0",
+    "@react-aria/utils": "^3.13.3",
+    "@react-stately/datepicker": "^3.0.2",
     "@sentry/nextjs": "^7.14.0",
     "@sentry/react": "^7.14.0",
     "@sentry/tracing": "^7.14.0",
