--- a/apps/client/package.json
+++ b/apps/client/package.json
@@ -83,6 +83,7 @@
     "react-select": "^5.4.0",
     "react-sortablejs": "^6.1.4",
     "react-use": "^17.4.0",
+    "remark-emoji": "^3.0.2",
     "remark-gfm": "^3.0.1",
     "remark-github": "^11.2.4",
     "slate": "^0.82.1",
