--- a/packages/types/package.json
+++ b/packages/types/package.json
@@ -34,7 +34,7 @@
     "type-fest": "^3.0.0"
   },
   "devDependencies": {
-    "@snailycad/permissions": "1.27.0",
+    "@snailycad/permissions": "workspace:*",
     "discord-api-types": "0.37.11",
     "tsup": "^6.2.3",
     "typescript": "^4.8.4"
