--- a/apps/client/package.json
+++ b/apps/client/package.json
@@ -35,6 +35,7 @@
     "@react-aria/datepicker": "^3.1.1",
     "@react-aria/dialog": "^3.3.1",
     "@react-aria/focus": "^3.8.0",
+    "@react-aria/i18n": "^3.6.1",
     "@react-aria/interactions": "^3.11.0",
     "@react-aria/label": "^3.4.1",
     "@react-aria/overlays": "^3.10.1",
