--- a/packages/ui/tsconfig.json
+++ b/packages/ui/tsconfig.json
@@ -9,6 +9,6 @@
     "skipLibCheck": true,
     "importHelpers": true,
     "esModuleInterop": true,
-    "jsx": "preserve"
+    "jsx": "react-jsx"
   }
 }
