Revert ":hammer: chore: use workspace builds for local packages"
This reverts commit fdf28ed16d3450067667902a17425da9a81e58ed.

--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -43,11 +43,11 @@
     "@sentry/node": "^7.14.0",
     "@sentry/tracing": "^7.14.0",
     "@snaily-cad/image-data-uri": "^3.1.0",
-    "@snailycad/config": "workspace:*",
-    "@snailycad/permissions": "workspace:*",
-    "@snailycad/schemas": "workspace:*",
-    "@snailycad/types": "workspace:*",
-    "@snailycad/utils": "workspace:*",
+    "@snailycad/config": "1.27.0",
+    "@snailycad/permissions": "1.27.0",
+    "@snailycad/schemas": "1.27.0",
+    "@snailycad/types": "1.27.0",
+    "@snailycad/utils": "1.27.0",
     "@tsed/common": "^6.133.1",
     "@tsed/core": "^6.133.1",
     "@tsed/di": "^6.133.1",
