--- a/apps/client/package.json
+++ b/apps/client/package.json
@@ -44,11 +44,11 @@
     "@sentry/nextjs": "^7.14.0",
     "@sentry/react": "^7.14.0",
     "@sentry/tracing": "^7.14.0",
-    "@snailycad/config": "workspace:*",
-    "@snailycad/permissions": "workspace:*",
-    "@snailycad/schemas": "workspace:*",
-    "@snailycad/types": "workspace:*",
-    "@snailycad/utils": "workspace:*",
+    "@snailycad/config": "1.27.0",
+    "@snailycad/permissions": "1.27.0",
+    "@snailycad/schemas": "1.27.0",
+    "@snailycad/types": "1.27.0",
+    "@snailycad/utils": "1.27.0",
     "@tailwindcss/typography": "^0.5.7",
     "@tanstack/match-sorter-utils": "^8.1.1",
     "@tanstack/react-table": "^8.5.13",
