--- a/packages/utils/package.json
+++ b/packages/utils/package.json
@@ -47,7 +47,7 @@
     "test": "yarn vitest run"
   },
   "devDependencies": {
-    "@snailycad/types": "workplace:*",
+    "@snailycad/types": "1.27.0",
     "c8": "^7.12.0",
     "tslib": "^2.4.0",
     "tsup": "^6.2.3",
