--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -16,6 +16,7 @@
   },
   "devDependencies": {
     "@snailycad/types": "workplace:*",
+    "tailwindcss": "^3.1.8",
     "tslib": "^2.4.0",
     "tsup": "^6.2.3",
     "typescript": "^4.8.4",
