:tada: feat: start on multi-select

--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -48,6 +48,7 @@
     "@react-stately/collections": "^3.4.4",
     "@react-stately/list": "^3.5.4",
     "@react-stately/select": "^3.3.2",
+    "@react-stately/selection": "^3.11.0",
     "next-intl": "^2.7.6",
     "react-bootstrap-icons": "^1.9.1"
   },
