--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -17,9 +17,7 @@
     "tailwindcss": "^3.1.8",
     "tslib": "^2.4.0",
     "tsup": "^6.2.3",
-    "typescript": "^4.8.4",
-    "vite": "^3.1.4",
-    "vitest": "^0.23.4"
+    "typescript": "^4.8.4"
   },
   "tsup": {
     "entry": [
@@ -40,15 +38,23 @@
   },
   "dependencies": {
     "@react-aria/button": "^3.6.2",
-    "@react-aria/combobox": "^3.4.2",
+    "@react-aria/dialog": "^3.4.0",
+    "@react-aria/focus": "^3.9.0",
+    "@react-aria/interactions": "^3.12.0",
+    "@react-aria/label": "^3.4.2",
+    "@react-aria/listbox": "^3.7.0",
+    "@react-aria/menu": "^3.6.2",
+    "@react-aria/overlays": "^3.11.0",
     "@react-aria/progress": "^3.3.2",
-    "@react-aria/select": "^3.8.2",
     "@react-aria/textfield": "^3.7.2",
     "@react-aria/utils": "^3.14.0",
     "@react-stately/collections": "^3.4.4",
     "@react-stately/list": "^3.5.4",
+    "@react-stately/menu": "^3.4.2",
     "@react-stately/select": "^3.3.2",
-    "@react-stately/selection": "^3.11.0",
+    "@react-types/overlays": "^3.6.4",
+    "@react-types/select": "^3.6.4",
+    "@react-types/shared": "^3.15.0",
     "next-intl": "^2.7.6",
     "react-bootstrap-icons": "^1.9.1"
   },
