:hammer: chore: bump TSeD to v7

--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -48,24 +48,25 @@
     "@snailycad/schemas": "1.27.1",
     "@snailycad/types": "1.27.1",
     "@snailycad/utils": "1.27.1",
-    "@tsed/common": "^6.133.1",
-    "@tsed/core": "^6.133.1",
-    "@tsed/di": "^6.133.1",
-    "@tsed/exceptions": "^6.133.1",
-    "@tsed/json-mapper": "^6.133.1",
-    "@tsed/platform-exceptions": "^6.133.1",
-    "@tsed/platform-express": "^6.133.1",
-    "@tsed/schema": "^6.133.1",
-    "@tsed/socketio": "^6.133.1",
-    "@tsed/swagger": "^6.133.1",
-    "bcrypt": "^5.0.1",
+    "@tsed/common": "^7.0.1",
+    "@tsed/components-scan": "^7.0.1",
+    "@tsed/core": "^7.0.1",
+    "@tsed/di": "^7.0.1",
+    "@tsed/exceptions": "^7.0.1",
+    "@tsed/json-mapper": "^7.0.1",
+    "@tsed/platform-exceptions": "^7.0.1",
+    "@tsed/platform-express": "^7.0.1",
+    "@tsed/schema": "^7.0.1",
+    "@tsed/socketio": "^7.0.1",
+    "@tsed/swagger": "^7.0.1",
+    "bcrypt": "^5.1.0",
     "compression": "1.7.4",
     "cookie": "^0.5.0",
     "cookie-parser": "1.4.6",
     "cors": "2.8.5",
     "cuid": "^2.1.8",
-    "discord-api-types": "0.37.11",
-    "express": "4.18.1",
+    "discord-api-types": "0.37.12",
+    "express": "4.18.2",
     "glob": "^8.0.3",
     "jsonwebtoken": "8.5.1",
     "nanoid": "^3.3.4",
