--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -3,7 +3,7 @@
   "version": "1.27.3",
   "scripts": {
     "watch": "docker compose up",
-    "dev": "yarn prisma migrate dev && yarn  prisma generate && yarn nodemon --watch \"src/**/*.ts\" --ignore \"node_modules/**/*\" --exec yarn ts-node -r tsconfig-paths/register src/main.ts",
+    "dev": "yarn  prisma generate && yarn nodemon --watch \"src/**/*.ts\" --ignore \"node_modules/**/*\" --exec yarn ts-node -r tsconfig-paths/register src/main.ts",
     "start": "yarn prisma migrate deploy && yarn prisma generate && yarn ts-node -r tsconfig-paths/register src/main.ts",
     "format": "yarn prisma format",
     "generate": "yarn prisma generate",
