--- a/apps/client/package.json
+++ b/apps/client/package.json
@@ -2,7 +2,7 @@
   "name": "@snailycad/client",
   "version": "1.27.4",
   "scripts": {
-    "dev": "yarn rimraf .env && yarn next dev",
+    "dev": " yarn next dev",
     "watch": "npm run dev",
     "build": "yarn validate && yarn next-build",
     "next-build": "yarn next build",
@@ -30,7 +30,6 @@
     "@radix-ui/react-tabs": "^1.0.0",
     "@radix-ui/react-toolbar": "^1.0.0",
     "@radix-ui/react-tooltip": "^1.0.0",
-    "@react-aria/button": "^3.6.1",
     "@react-aria/calendar": "^3.0.2",
     "@react-aria/datepicker": "^3.1.1",
     "@react-aria/dialog": "^3.3.1",
@@ -43,7 +42,6 @@
     "@react-aria/utils": "^3.14.0",
     "@react-stately/datepicker": "^3.0.2",
     "@sentry/nextjs": "^7.14.0",
-    "@sentry/react": "^7.14.0",
     "@sentry/tracing": "^7.14.0",
     "@snailycad/config": "1.27.4",
     "@snailycad/permissions": "1.27.4",
@@ -92,7 +90,7 @@
     "slate-react": "^0.83.0",
     "socket.io-client": "^4.5.2",
     "sortablejs": "^1.15.0",
-    "type-fest": "^3.0.0",
+    "use-intl": "^2.7.6",
     "uuid": "^9.0.0",
     "zod": "^3.19.1",
     "zustand": "^4.1.1"
