--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -56,14 +56,22 @@
       "@react-stately/menu",
       "@react-stately/radio",
       "@react-stately/select",
-      "tailwind-merge"
+      "tailwind-merge",
+      "@react-aria/calendar",
+      "@react-stately/calendar",
+      "@react-aria/i18n",
+      "@react-stately/datepicker",
+      "@react-aria/datepicker"
     ]
   },
   "dependencies": {
     "@react-aria/breadcrumbs": "^3.3.2",
     "@react-aria/button": "^3.6.2",
+    "@react-aria/calendar": "^3.0.3",
+    "@react-aria/datepicker": "^3.1.2",
     "@react-aria/dialog": "^3.4.0",
     "@react-aria/focus": "^3.9.0",
+    "@react-aria/i18n": "^3.6.1",
     "@react-aria/interactions": "^3.12.0",
     "@react-aria/label": "^3.4.2",
     "@react-aria/listbox": "^3.7.0",
@@ -73,7 +81,9 @@
     "@react-aria/radio": "^3.4.0",
     "@react-aria/textfield": "^3.7.2",
     "@react-aria/utils": "^3.14.0",
+    "@react-stately/calendar": "^3.0.3",
     "@react-stately/collections": "^3.4.4",
+    "@react-stately/datepicker": "^3.1.0",
     "@react-stately/list": "^3.5.4",
     "@react-stately/menu": "^3.4.2",
     "@react-stately/radio": "^3.6.0",
@@ -85,7 +95,8 @@
     "tailwind-merge": "^1.7.0"
   },
   "peerDependencies": {
-    "next-intl": "^2.8.0",
+    "date-fns": ">=2.29.3",
+    "next-intl": ">=2.8.0",
     "react": ">=18.2.0",
     "react-dom": ">=18.2.0"
   },
