--- a/apps/client/package.json
+++ b/apps/client/package.json
@@ -49,17 +49,18 @@
     "axios": "^1.1.3",
     "bignumber.js": "^9.1.0",
     "date-fns": "^2.29.3",
+    "eslint-config-next": "latest",
     "formik": "^2.2.9",
     "hex-color-regex": "^1.1.0",
     "is-hotkey": "^0.2.0",
     "is-mobile": "^3.1.1",
     "leaflet": "^1.9.2",
     "mdast-util-find-and-replace": "^2.2.1",
-    "next": "^13.0.0",
+    "next": "latest",
     "next-intl": "2.9.0",
     "nookies": "^2.5.2",
     "pretty-bytes": "^6.0.0",
-    "react": "^18.2.0",
+    "react": "latest",
     "react-bootstrap-icons": "^1.9.1",
     "react-colorful": "^5.6.1",
     "react-cool-onclickoutside": "^1.7.0",
@@ -67,7 +68,7 @@
     "react-digit-input": "^2.1.0",
     "react-dnd": "16.0.1",
     "react-dnd-html5-backend": "16.0.1",
-    "react-dom": "^18.2.0",
+    "react-dom": "latest",
     "react-google-recaptcha-v3": "^1.10.0",
     "react-hot-toast": "^2.4.0",
     "react-leaflet": "^4.1.0",
