--- a/apps/client/package.json
+++ b/apps/client/package.json
@@ -20,7 +20,7 @@
     "@casper124578/use-socket.io": "4.1.3",
     "@casper124578/useful": "^2.0.5",
     "@headlessui/react": "^1.7.3",
-    "@next/bundle-analyzer": "^12.3.1",
+    "@next/bundle-analyzer": "^13.0.0",
     "@radix-ui/react-accordion": "^1.0.1",
     "@radix-ui/react-context-menu": "^2.0.1",
     "@radix-ui/react-dropdown-menu": "^2.0.1",
@@ -33,8 +33,8 @@
     "@react-aria/interactions": "^3.12.0",
     "@react-aria/label": "^3.4.2",
     "@react-aria/ssr": "^3.3.0",
-    "@sentry/nextjs": "^7.16.0",
-    "@sentry/tracing": "^7.16.0",
+    "@sentry/nextjs": "^7.17.2",
+    "@sentry/tracing": "^7.17.2",
     "@snailycad/config": "1.29.2",
     "@snailycad/permissions": "1.29.2",
     "@snailycad/schemas": "1.29.2",
@@ -43,23 +43,24 @@
     "@snailycad/utils": "1.29.2",
     "@tailwindcss/typography": "^0.5.7",
     "@tanstack/match-sorter-utils": "^8.5.14",
-    "@tanstack/react-table": "^8.5.15",
+    "@tanstack/react-table": "^8.5.21",
     "@tanstack/react-virtual": "^3.0.0-alpha.0",
     "@tanstack/virtual-core": "^3.0.0-alpha.1",
     "axios": "^1.1.3",
     "bignumber.js": "^9.1.0",
     "date-fns": "^2.29.3",
+    "eslint-config-next": "latest",
     "formik": "^2.2.9",
     "hex-color-regex": "^1.1.0",
     "is-hotkey": "^0.2.0",
     "is-mobile": "^3.1.1",
     "leaflet": "^1.9.2",
     "mdast-util-find-and-replace": "^2.2.1",
-    "next": "^12.3.1",
-    "next-intl": "2.8.0",
+    "next": "latest",
+    "next-intl": "2.9.0",
     "nookies": "^2.5.2",
     "pretty-bytes": "^6.0.0",
-    "react": "^18.2.0",
+    "react": "latest",
     "react-bootstrap-icons": "^1.9.1",
     "react-colorful": "^5.6.1",
     "react-cool-onclickoutside": "^1.7.0",
@@ -67,12 +68,12 @@
     "react-digit-input": "^2.1.0",
     "react-dnd": "16.0.1",
     "react-dnd-html5-backend": "16.0.1",
-    "react-dom": "^18.2.0",
+    "react-dom": "latest",
     "react-google-recaptcha-v3": "^1.10.0",
     "react-hot-toast": "^2.4.0",
     "react-leaflet": "^4.1.0",
     "react-markdown": "^8.0.3",
-    "react-select": "^5.5.4",
+    "react-select": "^5.5.7",
     "react-sortablejs": "^6.1.4",
     "react-use": "^17.4.0",
     "remark-emoji": "^3.0.2",
@@ -83,24 +84,24 @@
     "slate-react": "^0.83.2",
     "socket.io-client": "^4.5.3",
     "sortablejs": "^1.15.0",
-    "use-intl": "^2.8.0",
+    "use-intl": "^2.9.0",
     "uuid": "^9.0.0",
     "zod": "^3.19.1",
-    "zustand": "^4.1.2"
+    "zustand": "^4.1.3"
   },
   "devDependencies": {
     "@types/leaflet": "^1.9.0",
-    "@types/react": "^18.0.21",
-    "@types/react-dom": "^18.0.6",
+    "@types/react": "^18.0.24",
+    "@types/react-dom": "^18.0.8",
     "@types/sortablejs": "^1.15.0",
     "@types/uuid": "^8.3.4",
-    "autoprefixer": "^10.4.12",
+    "autoprefixer": "^10.4.13",
     "postcss": "^8.4.18",
     "rimraf": "^3.0.2",
     "sass": "^1.55.0",
-    "tailwindcss": "^3.2.0",
+    "tailwindcss": "^3.2.1",
     "typescript": "^4.8.4",
-    "vite": "^3.1.8",
+    "vite": "^3.2.1",
     "vitest": "^0.24.3"
   }
 }
