--- a/apps/client/package.json
+++ b/apps/client/package.json
@@ -103,5 +103,8 @@
     "typescript": "^4.8.4",
     "vite": "^3.2.2",
     "vitest": "^0.24.4"
+  },
+  "resolutions": {
+    "@sentry/nextjs@^7.16.0": "patch:@sentry/nextjs@npm%3A7.17.3#../../.yarn/patches/@sentry-nextjs-npm-7.17.3-882f25bb0a.patch"
   }
 }
