--- a/.github/workflows/test-builds-typecheck.yml
+++ b/.github/workflows/test-builds-typecheck.yml
@@ -8,7 +8,7 @@ on:
 jobs:
   build:
     name: Build & Typecheck
-    runs-on: ubuntu-latest
+    runs-on: [ubuntu-latest, windows-latest]
     # env:
     #   TURBO_TOKEN: ${{ secrets.TURBO_TOKEN }}
     #   TURBO_TEAM: ${{ secrets.TURBO_TEAM }}
