--- a/.github/workflows/test-builds-typecheck.yml
+++ b/.github/workflows/test-builds-typecheck.yml
@@ -8,13 +8,14 @@ on:
 jobs:
   build:
     name: Build & Typecheck
-    runs-on: ubuntu-latest
+    runs-on: ${{ matrix.os }}
     # env:
     #   TURBO_TOKEN: ${{ secrets.TURBO_TOKEN }}
     #   TURBO_TEAM: ${{ secrets.TURBO_TEAM }}
 
     strategy:
       matrix:
+        os: [ubuntu-latest, windows-latest]
         node-version: [16.x]
 
     steps:
