--- a/packages/utils/package.json
+++ b/packages/utils/package.json
@@ -50,10 +50,10 @@
     "@snailycad/types": "1.32.0",
     "c8": "^7.12.0",
     "tslib": "^2.4.1",
-    "tsup": "^6.3.0",
+    "tsup": "^6.4.0",
     "typescript": "^4.8.4",
-    "vite": "^3.2.2",
-    "vitest": "^0.24.4"
+    "vite": "^3.2.3",
+    "vitest": "^0.25.1"
   },
   "tsup": {
     "entry": [
@@ -64,6 +64,7 @@
     "platform": "node",
     "target": "node16",
     "silent": true,
+    "treeshake": true,
     "format": [
       "cjs",
       "esm"
