--- a/packages/types/package.json
+++ b/packages/types/package.json
@@ -45,6 +45,7 @@
     "platform": "node",
     "target": "node16",
     "silent": true,
+    "treeshake": true,
     "format": [
       "cjs",
       "esm"
