--- a/packages/schemas/package.json
+++ b/packages/schemas/package.json
@@ -39,6 +39,7 @@
     "bundle": false,
     "platform": "node",
     "target": "node16",
+    "treeshake": true,
     "silent": true,
     "minify": true,
     "format": [
