--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -21,8 +21,10 @@ services:
     command: "yarn workspace @snailycad/api dev"
     ports:
       - "8080:8080"
+      - "${PORT_API}:${PORT_API}"
     expose:
       - 8080
+      - ${PORT_API}
     volumes:
       - .:/srv/api
     env_file:
