:hammer: chore: minor fixes

--- a/production.docker-compose.yml
+++ b/production.docker-compose.yml
@@ -24,8 +24,10 @@ services:
         - BUILD_CONTEXT=api
     ports:
       - "8080:8080"
+      - "${PORT_API}:${PORT_API}"
     expose:
       - 8080
+      - ${PORT_API}
     depends_on:
       - postgres
     networks:
@@ -43,8 +45,9 @@ services:
 
     ports:
       - "3000:3000"
+      - "${PORT_CLIENT}:${PORT_CLIENT}"
     expose:
-      - 3000
+      - ${PORT_CLIENT}
     env_file:
       - .env
     depends_on:
