--- a/packages/config/package.json
+++ b/packages/config/package.json
@@ -22,10 +22,10 @@
     "test": "yarn vitest run"
   },
   "devDependencies": {
-    "tsup": "^6.3.0",
+    "tsup": "^6.4.0",
     "typescript": "^4.8.4",
-    "vite": "^3.2.2",
-    "vitest": "^0.24.4"
+    "vite": "^3.2.3",
+    "vitest": "^0.25.1"
   },
   "tsup": {
     "entry": [
@@ -36,6 +36,7 @@
     "dts": true,
     "bundle": false,
     "platform": "node",
+    "treeshake": true,
     "target": "node16",
     "silent": true,
     "format": [
