--- a/packages/permissions/package.json
+++ b/packages/permissions/package.json
@@ -26,10 +26,10 @@
     "test": "yarn vitest run"
   },
   "devDependencies": {
-    "tsup": "^6.3.0",
+    "tsup": "^6.4.0",
     "typescript": "^4.8.4",
-    "vite": "^3.2.2",
-    "vitest": "^0.24.4"
+    "vite": "^3.2.3",
+    "vitest": "^0.25.1"
   },
   "dependencies": {
     "zod": "^3.19.1"
@@ -42,6 +42,7 @@
     "bundle": false,
     "platform": "node",
     "target": "node16",
+    "treeshake": true,
     "silent": true,
     "format": [
       "cjs",
