--- a/packages/schemas/package.json
+++ b/packages/schemas/package.json
@@ -25,7 +25,7 @@
   },
   "devDependencies": {
     "tslib": "^2.4.1",
-    "tsup": "^6.3.0",
+    "tsup": "^6.4.0",
     "typescript": "^4.8.4"
   },
   "dependencies": {
@@ -39,6 +39,7 @@
     "bundle": false,
     "platform": "node",
     "target": "node16",
+    "treeshake": true,
     "silent": true,
     "minify": true,
     "format": [
