--- a/packages/types/package.json
+++ b/packages/types/package.json
@@ -32,8 +32,8 @@
   },
   "devDependencies": {
     "@snailycad/permissions": "1.32.0",
-    "discord-api-types": "0.37.16",
-    "tsup": "^6.3.0",
+    "discord-api-types": "0.37.17",
+    "tsup": "^6.4.0",
     "typescript": "^4.8.4"
   },
   "tsup": {
@@ -45,6 +45,7 @@
     "platform": "node",
     "target": "node16",
     "silent": true,
+    "treeshake": true,
     "format": [
       "cjs",
       "esm"
