--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -1,8 +1,9 @@
 {
   "name": "@snailycad/ui",
+  "type": "module",
   "version": "1.32.0",
-  "main": "./dist/index.mjs",
-  "module": "./dist/index.mjs",
+  "main": "./dist/index.js",
+  "module": "./dist/index.js",
   "types": "./dist/index.d.ts",
   "files": [
     "dist"
@@ -14,11 +15,11 @@
   },
   "devDependencies": {
     "@snailycad/types": "1.32.0",
-    "tailwindcss": "^3.2.1",
+    "tailwindcss": "^3.2.3",
     "tslib": "^2.4.1",
-    "tsup": "^6.3.0",
+    "tsup": "^6.4.0",
     "typescript": "^4.8.4",
-    "vite": "^3.2.2"
+    "vite": "^3.2.3"
   },
   "tsup": {
     "entry": [
@@ -30,6 +31,7 @@
     "platform": "node",
     "target": "node16",
     "silent": true,
+    "treeshake": true,
     "format": [
       "esm"
     ],
@@ -94,11 +96,11 @@
     "@react-types/select": "^3.6.4",
     "@react-types/shared": "^3.15.0",
     "react-bootstrap-icons": "^1.9.1",
-    "tailwind-merge": "^1.7.0"
+    "tailwind-merge": "^1.8.0"
   },
   "peerDependencies": {
     "date-fns": ">=2.29.3",
-    "next-intl": ">=2.8.0",
+    "next-intl": ">=2.9.1",
     "react": ">=18.2.0",
     "react-dom": ">=18.2.0"
   },
