--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -72,6 +72,7 @@
     "@react-aria/breadcrumbs": "^3.3.2",
     "@react-aria/button": "^3.6.2",
     "@react-aria/calendar": "^3.0.3",
+    "@react-aria/combobox": "^3.4.2",
     "@react-aria/datepicker": "^3.1.2",
     "@react-aria/dialog": "^3.4.0",
     "@react-aria/focus": "^3.9.0",
@@ -87,14 +88,18 @@
     "@react-aria/utils": "^3.14.0",
     "@react-stately/calendar": "^3.0.3",
     "@react-stately/collections": "^3.4.4",
+    "@react-stately/combobox": "^3.2.2",
+    "@react-stately/data": "^3.7.0",
     "@react-stately/datepicker": "^3.1.0",
     "@react-stately/list": "^3.5.4",
     "@react-stately/menu": "^3.4.2",
     "@react-stately/radio": "^3.6.0",
     "@react-stately/select": "^3.3.2",
+    "@react-types/combobox": "^3.5.4",
     "@react-types/overlays": "^3.6.4",
     "@react-types/select": "^3.6.4",
     "@react-types/shared": "^3.15.0",
+    "@snailycad/utils": "1.32.0",
     "react-bootstrap-icons": "^1.9.1",
     "tailwind-merge": "^1.8.0"
   },
