--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -15,6 +15,7 @@
   },
   "devDependencies": {
     "@snailycad/types": "1.32.0",
+    "rimraf": "^3.0.2",
     "tailwindcss": "^3.2.3",
     "tslib": "^2.4.1",
     "tsup": "^6.4.0",
