--- a/apps/client/package.json
+++ b/apps/client/package.json
@@ -81,6 +81,7 @@
     "slate-react": "^0.83.2",
     "socket.io-client": "^4.5.3",
     "sortablejs": "^1.15.0",
+    "storage-factory": "^0.2.1",
     "use-intl": "^2.9.1",
     "uuid": "^9.0.0",
     "zod": "^3.19.1",
