--- a/.env.example
+++ b/.env.example
@@ -24,15 +24,15 @@ ENCRYPTION_TOKEN="Geu2WGypP7irbwa3tCeeKS6YiyluFLep"
 
 # This is the URL/IP to your site where the CAD is hosted.
 # -> e.g. https://cad.mysite.com or http://99.99.00.190:3000 or *
-CORS_ORIGIN_URL="http://localhost:3000"
+CORS_ORIGIN_URL="http://192.168.x.x:3000"
 
 # This is the URL/IP to your site where the CAD is hosted.
 # -> e.g. https://cad.mysite.com or http://99.99.00.190:3000
-NEXT_PUBLIC_CLIENT_URL="http://localhost:3000/v1"
+NEXT_PUBLIC_CLIENT_URL="http://192.168.x.x:3000"
 
 # The URL/IP to where the API is hosted.
 # -> e.g. https://cad-api.mysite.com/v1 or http://99.99.00.190:8080/v1
-NEXT_PUBLIC_PROD_ORIGIN="http://api:8080/v1"
+NEXT_PUBLIC_PROD_ORIGIN="http://192.168.x.x:8080/v1"
 
 # only enter this value if you're using a domain!
 # domain should only be the domain, NOT including sub-domains
