--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -27,6 +27,7 @@
     "@types/node": "^18.11.9",
     "@types/qrcode": "^1.5.0",
     "@types/sharp": "^0.31.0",
+    "dotenv": "^16.0.3",
     "esbuild": "^0.15.14",
     "esbuild-register": "^3.4.1",
     "multer": "^1.4.5-lts.1",
