--- a/package.json
+++ b/package.json
@@ -34,5 +34,8 @@
     "prettier": "^2.7.1",
     "pretty-quick": "^3.1.3",
     "turbo": "^1.6.3"
+  },
+  "engines": {
+    "node": ">=16.13.0"
   }
 }
