:hammer: chore: ignore api build in ci

--- a/.github/workflows/test-builds-typecheck.yml
+++ b/.github/workflows/test-builds-typecheck.yml
@@ -43,7 +43,7 @@ jobs:
         run: yarn
 
       - name: Run turbo build
-        run: yarn turbo run build
+        run: yarn turbo run build --filter=\!@snailycad/api
 
       - name: Run turbo typecheck
         run: yarn turbo run typecheck
