--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -42,6 +42,7 @@
     "@discordjs/rest": "^1.3.0",
     "@prisma/client": "^4.6.1",
     "@sentry/node": "^7.21.1",
+    "@sentry/profiling-node": "^0.0.12",
     "@sentry/tracing": "^7.21.1",
     "@snaily-cad/image-data-uri": "^3.1.0",
     "@snailycad/config": "1.34.0",
