--- a/apps/client/package.json
+++ b/apps/client/package.json
@@ -42,6 +42,7 @@
     "@snailycad/utils": "1.35.2",
     "@tailwindcss/typography": "^0.5.8",
     "@tanstack/match-sorter-utils": "^8.7.0",
+    "@tanstack/react-query": "^4.19.0",
     "@tanstack/react-table": "^8.7.0",
     "@tanstack/react-virtual": "^3.0.0-alpha.0",
     "@tanstack/virtual-core": "^3.0.0-alpha.1",
