--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -23,6 +23,7 @@
     "@types/express": "^4.17.14",
     "@types/glob": "^8.0.0",
     "@types/jsonwebtoken": "8.5.9",
+    "@types/lodash.set": "^4.3.7",
     "@types/multer": "^1.4.7",
     "@types/node": "^18.11.9",
     "@types/qrcode": "^1.5.0",
@@ -71,6 +72,7 @@
     "express": "4.18.2",
     "glob": "^8.0.3",
     "jsonwebtoken": "8.5.1",
+    "lodash.set": "^4.3.2",
     "nanoid": "^3.3.4",
     "nodemon": "^2.0.20",
     "otplib": "^12.0.1",
