--- a/apps/client/package.json
+++ b/apps/client/package.json
@@ -49,6 +49,7 @@
     "@tanstack/virtual-core": "^3.0.0-alpha.1",
     "axios": "^1.1.3",
     "bignumber.js": "^9.1.0",
+    "color": "^4.2.3",
     "date-fns": "^2.29.3",
     "eslint-config-next": "^13.0.5",
     "formik": "^2.2.9",
@@ -91,6 +92,7 @@
     "zustand": "^4.1.4"
   },
   "devDependencies": {
+    "@types/color": "^3.0.3",
     "@types/leaflet": "^1.9.0",
     "@types/react": "^18.0.25",
     "@types/react-dom": "^18.0.9",
