--- a/.env.example
+++ b/.env.example
@@ -1,10 +1,10 @@
 # Documentation can be found at:  https://cad-docs.caspertheghost.me/docs/installations
 
 # This is the password to the postgress database.
-POSTGRES_PASSWORD="admin"
+POSTGRES_PASSWORD="postgres"
 
 # This is the username to the postgress database.
-POSTGRES_USER="admin"
+POSTGRES_USER="postgres"
 
 # The database host - Set as 'postgres' when using docker-compose
 DB_HOST="localhost"
