--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -77,6 +77,7 @@
     "qrcode": "^1.5.1",
     "sharp": "^0.31.2",
     "socket.io": "^4.5.4",
-    "undici": "^5.14.0"
+    "undici": "^5.14.0",
+    "use-intl": "^2.10.2"
   }
 }
