--- a/apps/client/package.json
+++ b/apps/client/package.json
@@ -19,19 +19,21 @@
   "dependencies": {
     "@casper124578/use-socket.io": "4.1.3",
     "@casper124578/useful": "^2.0.6",
-    "@headlessui/react": "^1.7.7",
+    "@headlessui/react": "^1.7.5",
+    "@next/bundle-analyzer": "^13.0.6",
     "@radix-ui/react-accordion": "^1.0.1",
-    "@radix-ui/react-context-menu": "^2.1.0",
+    "@radix-ui/react-context-menu": "^2.0.1",
     "@radix-ui/react-dropdown-menu": "^2.0.1",
     "@radix-ui/react-hover-card": "^1.0.2",
     "@radix-ui/react-switch": "^1.0.1",
     "@radix-ui/react-tabs": "^1.0.1",
     "@radix-ui/react-toolbar": "^1.0.1",
     "@radix-ui/react-tooltip": "^1.0.2",
-    "@react-aria/label": "^3.4.4",
-    "@react-aria/ssr": "^3.4.1",
-    "@sentry/nextjs": "^7.28.1",
-    "@sentry/tracing": "^7.28.1",
+    "@react-aria/label": "^3.4.3",
+    "@react-aria/ssr": "^3.4.0",
+    "@react-stately/data": "^3.8.0",
+    "@sentry/nextjs": "^7.24.2",
+    "@sentry/tracing": "^7.24.2",
     "@snailycad/config": "1.41.0",
     "@snailycad/permissions": "1.41.0",
     "@snailycad/schemas": "1.41.0",
@@ -39,15 +41,17 @@
     "@snailycad/ui": "1.41.0",
     "@snailycad/utils": "1.41.0",
     "@tailwindcss/typography": "^0.5.8",
-    "@tanstack/match-sorter-utils": "^8.7.2",
-    "@tanstack/react-query": "^4.20.4",
-    "@tanstack/react-table": "^8.7.4",
+    "@tanstack/match-sorter-utils": "^8.7.0",
+    "@tanstack/react-query": "^4.19.1",
+    "@tanstack/react-query-devtools": "^4.19.1",
+    "@tanstack/react-table": "^8.7.0",
     "@tanstack/react-virtual": "^3.0.0-alpha.0",
     "@tanstack/virtual-core": "^3.0.0-alpha.1",
     "axios": "^1.2.1",
     "bignumber.js": "^9.1.1",
     "color": "^4.2.3",
     "date-fns": "^2.29.3",
+    "eslint-config-next": "^13.0.6",
     "formik": "^2.2.9",
     "hex-color-regex": "^1.1.0",
     "is-hotkey": "^0.2.0",
@@ -66,7 +70,7 @@
     "react-dnd": "16.0.1",
     "react-dnd-html5-backend": "16.0.1",
     "react-dom": "18.2.0",
-    "react-google-recaptcha-v3": "^1.10.1",
+    "react-google-recaptcha-v3": "^1.10.0",
     "react-hot-toast": "^2.4.0",
     "react-leaflet": "^4.2.0",
     "react-markdown": "^8.0.4",
@@ -78,28 +82,29 @@
     "remark-github": "^11.2.4",
     "slate": "^0.87.0",
     "slate-history": "^0.86.0",
-    "slate-react": "^0.88.0",
+    "slate-react": "^0.87.0",
     "socket.io-client": "^4.5.4",
     "sortablejs": "^1.15.0",
     "storage-factory": "^0.2.1",
     "use-intl": "^2.10.2",
     "uuid": "^9.0.0",
-    "zod": "^3.20.2",
+    "zod": "^3.19.1",
     "zustand": "^4.1.5"
   },
   "devDependencies": {
     "@types/color": "^3.0.3",
     "@types/leaflet": "^1.9.0",
     "@types/react": "^18.0.26",
-    "@types/react-dom": "^18.0.10",
+    "@types/react-dom": "^18.0.9",
     "@types/sortablejs": "^1.15.0",
     "@types/uuid": "^9.0.0",
     "autoprefixer": "^10.4.13",
-    "postcss": "^8.4.20",
-    "sass": "^1.57.1",
+    "postcss": "^8.4.19",
+    "rimraf": "^3.0.2",
+    "sass": "^1.56.2",
     "tailwindcss": "^3.2.4",
     "typescript": "^4.9.4",
-    "vite": "^4.0.3",
-    "vitest": "^0.26.2"
+    "vite": "^4.0.0",
+    "vitest": "^0.25.6"
   }
 }
