chore: update .env.example

--- a/.env.example
+++ b/.env.example
@@ -6,7 +6,9 @@ POSTGRES_PASSWORD="postgres"
 # This is the username to the postgress database.
 POSTGRES_USER="postgres"
 
-# The database host - Set as 'postgres' when using docker-compose
+# The database host
+# -> Docker install: "postgres"
+# -> Standalone install: "localhost" (or another IP)
 DB_HOST="localhost"
 
 # The database port - keep port as '5432' when using docker-compose
@@ -58,4 +60,3 @@ NODE_ENV="production"
 
 # Do not change this, unless you know what you're doing!
 DATABASE_URL=postgresql://${POSTGRES_USER}:${POSTGRES_PASSWORD}@${DB_HOST}:${DB_PORT}/${POSTGRES_DB}?sslmode=prefer
-
