--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "dotenv": "^16.0.3",
     "eslint": "^8.31.0",
     "husky": "^8.0.3",
-    "prettier": "^2.8.1",
+    "prettier": "2.8.1",
     "pretty-quick": "^3.1.3",
     "turbo": "^1.7.0"
   },
