:tada: feat: improved filtering

--- a/packages/audit-logger/tsconfig.json
+++ b/packages/audit-logger/tsconfig.json
@@ -5,6 +5,7 @@
     "target": "ESNext",
     "module": "CommonJS",
     "moduleResolution": "node",
-    "declaration": true
+    "declaration": true,
+    "resolveJsonModule": true
   }
 }
