:rocket: feat: robust Action logs (#1414)
* :rocket: feat: robust Action logs

* Format code with prettier

* :tada: feat: improved filtering

* chore: update README

* chore: minor fixes

* chore: minor bug fixes

* :tada: feat: add more types

* update deps

* chore: update migration

* chore: 1 migration

* :tada: feat: add some CAD-settings updates

Co-authored-by: deepsource-autofix[bot] <62050782+deepsource-autofix[bot]@users.noreply.github.com>

--- a/packages/audit-logger/tsconfig.json
+++ b/packages/audit-logger/tsconfig.json
@@ -6,10 +6,7 @@
     "module": "CommonJS",
     "moduleResolution": "node",
     "declaration": true,
-    "skipLibCheck": true,
-    "importHelpers": true,
-    "esModuleInterop": true,
-    "jsx": "react-jsx"
+    "resolveJsonModule": true
   },
   "exclude": ["dist", "node_modules"]
 }
