:bug: fix: calendar picker position

--- a/apps/client/package.json
+++ b/apps/client/package.json
@@ -55,7 +55,7 @@
     "is-hotkey": "^0.2.0",
     "leaflet": "^1.9.3",
     "mdast-util-find-and-replace": "^2.2.1",
-    "next": "^13.0.6",
+    "next": "13.0.6",
     "next-intl": "2.10.2",
     "nookies": "^2.5.2",
     "pretty-bytes": "^6.0.0",
